--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
     description = "Companion website for Affected the book."
     logoSmall = "/images/affected-icon.png"
     favicon = "favicon.ico"
-    opengraphImage = "/images/osprey.png"
+    opengraphImage = "/images/affected-icon.png"
     twitter = ""
     linkedin = ""
     github = ""
