--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
 title = "affected book"
-#baseURL = "https://affectedbook.com"
-baseURL = "http://affectedbook.com.s3-website-ap-southeast-2.amazonaws.com"
+baseURL = "http://affectedbook.com"
 tags = ["affected book", "design thinking", "companion"]
 languageCode = "en-US"
 config = "config.toml"
